# catspace

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  COMPONENTS.md  FIELD_PLAN.md  GLOSSARY.md  JOURNAL.md  MATH_AUDIT.md  PLANNER_PROBE_DESIGN.md  README.md  TWO_HORIZON_DESIGN.md  UNCERTAINTY_DESIGN.md  VIZ_PLAN.md  pyproject.toml  requirements.txt
artifacts/: RESULTS-v2.md  RESULTS-v3.md  filmstrip.md  krkn-linked-viewer.html  krkn_viewer_template.html  region-discovery-feasibility-standalone.md  results.md  roadmap-v2.md  thought-viewer-vs-optimal.html  thought-viewer.html  viewer_template.html
catspace/: abtest.py  arena.py  audit.py  chain.py  competence.py  concepts.py  diagnostic_krrkbp.py  game.py  goal_bank.py  memory_field.py  opponents.py  realboard.py  scoring.py  two_field.py  uci.py
code/: atlas.py  diagnostics.py  domain.py  exp_generalization.py  exp_krkn.py  exp_krkn2.py  exp_krrk.py  exp_policy_iteration.py  exp_search.py  experiment.py  gen_krkn_viewer.py  gen_ui_data.py  gen_ui_data_pi.py  gen_ui_data_vs_optimal.py  krkn.py  krkn_map.py  krrk.py  krrk_atlas.py  learn.py  minimax_opp.py  neural.py  region_map.py  sklearn_free.py  stockfish_opp.py  tsne_cones.py  tsne_maps.py
docs/: DESIGN_NOTES.md  IMPLEMENTATION_PLAN.md
experiments/: acpl_probe.py  adaptive_vs_uniform.py  arena_real.py  build_competence_map.py  build_lichess_shards.py  capacity_forensics.py  certainty_distill.py  certainty_rollouts.py  committor_distill.py  committor_recalibrate.py  committor_root_loop.py  compare_methods.py  conversion_compare.py  decompose_demo.py  (+45 more)
(+209 files in other folders)
